[gd_scene load_steps=7 format=3 uid="uid://c0xj2er6d7be3"]

[ext_resource type="Script" path="res://Game/PopupChoiceMenu.gd" id="1_fn7i0"]
[ext_resource type="Texture2D" uid="uid://dbyt1olkhxude" path="res://Backgrounds/Noises/noise6jpg.jpg" id="2_75w8x"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_pd4l0"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_6a27v"]
width = 300
height = 400
noise = SubResource("FastNoiseLite_pd4l0")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_lu0v8"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_pi77d"]
width = 300
height = 400
noise = SubResource("FastNoiseLite_lu0v8")

[node name="PopupChoiceMenu" type="MarginContainer"]
clip_children = 1
z_index = 30
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -750.0
offset_top = -275.0
offset_right = 750.0
offset_bottom = 275.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fn7i0")

[node name="Choice_name" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Choise name"

[node name="Background" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.152941)
scale = Vector2(1.17191, 0.430169)
texture = ExtResource("2_75w8x")
centered = false

[node name="Button" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "ACCEPT"

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.35
columns = 7

[node name="Button1" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
icon = SubResource("NoiseTexture2D_6a27v")

[node name="Button1_Text" type="Label" parent="GridContainer/Button1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2

[node name="Seperator1" type="Control" parent="GridContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="Seperator1_Text" type="Label" parent="GridContainer/Seperator1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.5
offset_top = -13.0
offset_right = 25.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "VALUE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button2" type="Button" parent="GridContainer"]
layout_mode = 2
icon = SubResource("NoiseTexture2D_pi77d")

[node name="Button2_Text" type="Label" parent="GridContainer/Button2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2

[node name="Seperator2" type="Control" parent="GridContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="Button3" type="Button" parent="GridContainer"]
layout_mode = 2
icon = SubResource("NoiseTexture2D_pi77d")

[node name="Button3_Text" type="Label" parent="GridContainer/Button3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2

[node name="Seperator3" type="Control" parent="GridContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="Button4" type="Button" parent="GridContainer"]
layout_mode = 2
icon = SubResource("NoiseTexture2D_pi77d")

[node name="Button4_Text" type="Label" parent="GridContainer/Button4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="GridContainer/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="GridContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="GridContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="GridContainer/Button4" to="." method="_on_button_4_pressed"]
